// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Column component should render with given styles 1`] = `
<Component
  style={
    Object {
      "padding": 10,
    }
  }
>
  <Component />
</Component>
`;

exports[`Column component should render with no styles 1`] = `
<Component
  style={Object {}}
>
  <Component />
</Component>
`;
